# TeslaUIDemo

./: CMakeLists.txt  TeslaUIDemo.qmlproject  TeslaUIDemo.qmlproject.qtds  main.cpp  main.qml  qmlmodules  translations.db-shm
content/: App.qml  Screen01.ui.qml
content/ui/BottomBar/: BottomBar.ui.qml
content/ui/LeftScreen/: LeftScreen.ui.qml
content/ui/RightScreen/: RightScreen.qml  RightScreen.ui.qml
controller/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  hvachandler.h.autosave  system.cpp  system.h
imports/: CMakeLists.txt
imports/TeslaUIDemo/: CMakeLists.txt  Constants.qml  qmldir
imports/TeslaUIDemo/designer/: plugin.metainfo
src/: import_qml_plugins.h
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  VolumeLevelComponent.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: MapDisplay.qml  NavigationSearchBox.qml  RightScreen.qml  RightScreen.qml.autosave
